--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WorkoutSource</string>
+    <string name="exercise_list">Workout</string>
+    <string name="exercise_detail">Instruction</string>
 </resources>
